fix() horizontal scroll css fix for scrollX that is now used insead of hScroll

--- a/demo/app/styles/main.css
+++ b/demo/app/styles/main.css
@@ -1,15 +1,21 @@
 /* Will be compiled down to a single stylesheet with your sass files */
 #mycontainer {
   width: 100%;
-  height: 20rem;
+  height: 21rem;
 }
 
 .listitem {
   width: 100%;
   font-size: 2rem;
   height: 3rem;
-  line-height: 1;
-  border-bottom: 1px solid #000;
+  line-height: 3rem;
+}
+
+.listitem:nth-child(even){
+	background-color: #eee;
+}
+.listitem:nth-child(odd){
+  background-color: #ddd;
 }
 
 #logger {
